# cxx-project-template

./: .clang-format  CMakeLists.txt.in  CMakeLists.txt.j2  CMakePresets.json  README.md  cmake_target.cmake  conanfile.py.in  conanfile.py.j2  configure.py
.github/cmake/: cmake_project.cmake  executable_definition.cmake  interface_library_definition.cmake  shared_library_definition.cmake  static_library_definition.cmake
.github/python/: pyproject.toml
.github/python/src/cxxproject/: cmake.py  format.py  main.py  project.py
.github/workflows/: create_project.yml
cmake/: TemplateConfig.cmake.in  cmake_header.cmake  cmake_header.cmake.in  cmake_source.cmake.in  cmake_uninstall.cmake
include/__template__/: export.hpp  export.hpp.in
include/template/: export.h.in  template.hpp.in
include/{{ project.namespace }}/: export.hpp.j2  {{ project.name }}.h.j2  {{ project.name }}.hpp.j2
src/: CMakeLists.txt  CMakeLists.txt.in  CMakeLists.txt.j2  main.cpp  {{ project.name }}.c.j2  {{ project.name }}.cpp.j2
src/template/: main.c.in  main.cpp.in  template.c.in  template.cpp.in
test/: CMakeLists.txt  CMakeLists.txt.in  __template___tests.cpp
test/template/: CMakeLists.txt.in  template_test.cpp.in
test_package/: CMakeLists.txt.j2  conanfile.py.j2
test_package/src/: CMakeLists.txt.j2  main.cpp.j2
tests/: CMakeLists.txt.j2  {{ project.name }}_test.cpp.j2
