[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "create-project"
version = "0.1.0"
description = "A template repository for a C++ project with CMake and Conan. A GitHub Action workflow is provided with the on workflow_dispatch event. This event has a Project Type input that lets the user configure this template as a C++ executable, static library, shared library, or an interface library which is header only."
requires-python = ">=3.12"

dependencies = [
    "jinja2",
    "click",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "PyGithub>=2.0.0",
    "gitpython",
]

[project.scripts]
create-project = "cxxproject.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cxxproject*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

addopts = "-v --strict-markers"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]